--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
+<!--
+  HTML
+
+  HyperText = texto com link
+  Markup = tags ou marcações
+  Language = sintaxe de uma linguagem
+
+  CSS = cascading specificity 
+
+-->
+
 <!DOCTYPE html>
 
-<html>
+<html lang="pt_BR">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>John Weber - DoWhile 2021</title>
 
     <link rel="stylesheet" href="style.css" />
